--- a/ourinternet/static/sass/_events.scss
+++ b/ourinternet/static/sass/_events.scss
@@ -66,7 +66,7 @@
 
   .location {
     font-style: italic;
-    margin-bottom: 1em;
+    margin-bottom: 0.5em;
 
   }
 }
