--- a/ourinternet/static/sass/_press.scss
+++ b/ourinternet/static/sass/_press.scss
@@ -68,6 +68,10 @@
     vertical-align: top;
     width: 11em;
   }
+
+  .title {
+    padding-bottom: 0.5em;
+  }
 }
 
 .press-release-link {
