--- a/ourinternet/static/sass/_publications.scss
+++ b/ourinternet/static/sass/_publications.scss
@@ -70,11 +70,10 @@
     width: 11em;
   }
 
-  .location {
-    font-style: italic;
-    margin-bottom: 1em;
-
+  .title {
+    padding-bottom: 0.5em;
   }
+
 }
 
 .publication-link {
